# cssrlib

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
cssrlib/: __init__.py  cacode.py  cssrlib.py  ephemeris.py  gnss.py  mlambda.py  nav.py  peph.py  plot.py  pntpos.py  ppp.py  ppprtk.py  read_rnx.py  read_rtcm3.py  read_ubx.py  rinex.py  rtk.py  tlesim.py
cssrlib/data/: 2021078M.l6  3034265G.21O  SEPT078M.21O  SEPT2650.21P  SEPT265G.21O  TLE_GNSS_PRN-GEJ.txt  TLE_GNSS_PRN-QZS.txt  clas_grid.def  gnss.txt
cssrlib/tests/: cacode.py  read_rnx.py  test_cssr.py  test_cssr_grid.py  test_eph.py  test_pntpos.py  test_pntpos2.py  test_ppprtk.py  test_ppprtk2.py  test_rtk.py  test_rtk2.py  test_tlesim.py  test_trop.py
data/: 30340780.21q  TLE_GNSS_PRN.txt
src/: .gitignore
src/cssrlib/: __init__.py  cssr_bds.py  cssr_has.py  cssr_mdc.py  cssr_pvs.py  cssrlib.py  dgps.py  ephemeris.py  ewss.py  gnss.py  mlambda.py  osnma.py  peph.py  plot.py  pntpos.py  ppp.py  ppp_bds.py  ppp_has.py  pppigs.py  ppprtk.py  pppssr.py  qznma.py  rawnav.py  rinex.py  rtcm.py  rtk.py  sbas.py  tlesim.py  utils.py
src/cssrlib/data/: 3034078M1.21O  COD0MGXFIN_20212650000_01D_01D_OSB.BIA  COD0MGXFIN_20212650000_01D_05M_ORB.SP3  SEPT078M.21P  SEPT078M1.21O  test.atx
src/cssrlib/test/: test_eph.py  test_gnss.py  test_misc.py  test_peph.py  test_rnx.py  test_rtk.py
tests/: test_cssr.py  test_eph.py  test_ppprtk.py  test_rtk.py  test_tlesim.py  test_trop.py
tutorials/: auth.ipynb  basic.ipynb  cssrlib.ipynb  ewss.ipynb  ppp.ipynb
