[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cssrlib"
version = "1.2.1"
description = "Python Toolkit for PPP/PPP-RTK positioning"
authors = [
    {name="Rui Hirokawa", email="rui.hirokawa@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "bitstruct",
    "galois",
    "crccheck",
    "notebook",
    "numpy",
    "matplotlib",
    "cartopy",
]
