[metadata]
name = cssrlib
version = 0.1.0
author = Rui Hirokawa
author_email = rui.hirokawa@gmail.com
description = Compact SSR Library for PPP/PPP-RTK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hirokawa/cssrlib
project_urls =
    Bug Tracker = https://github.com/hirokawa/cssrlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

